@@ -25,7 +25,7 @@
 %      tint_maxdev   Maximum deviation from nominal integration times.
 %                    Default is 0.02.
 %      lag0_max      Max allowed value for ZeroLagVar. 
-%                    Default is 0.1.
+%                    Default is 0.5.
 %      q_tspill      Flag to consider Tspill qualilty variable. 
 %                    Defualt is 1.
 %      q_trec        Flag to consider Trec qualilty variable. 
@@ -53,7 +53,7 @@ function [itan,issb] = l1b_filter(L1B,varargin)
 %
 [ztan_low,ztan_high,tint_maxdev,lag0_max,...
  q_tspill,q_trec,q_noise,q_scan,q_nspec,q_tb,q_tint,q_ref1,q_ref2,q_moon] = ...
-    optargs( varargin, { -Inf, Inf, 0.02, 0.1, ...
+    optargs( varargin, { -Inf, Inf, 0.02, 0.5, ...
                     1, 1, 1, 0, 0, 0, 0, 0, 0, 1 } ); 
 
 
@@ -65,6 +65,7 @@ tint0 = [ 0.86 1.86 3.86 ];
 % Index of tangent altitudes to keep
 %
 itan = find( ...
+    L1B.Type                    == 8              &  ...
     L1B.Altitude                >= ztan_low       &  ...
     L1B.Altitude                <= ztan_high      &  ...
     ( abs(L1B.IntTime-tint0(1)) <= tint_maxdev |     ...
